Time: 125 ms (13.05%) | Memory: 198.2 MB (96.10%) - LeetSync